gac_sb/objects/AppCIRcqInnoAdvance__c.object
<CustomObject>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>AppCIRcqInnoAdvance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auditAnterioriteHistorique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Historique des contrôles fiscaux</inlineHelpText>
        <label>Audit - Connaissance historique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditAnteriorite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dossiers justificatifs</inlineHelpText>
        <label>Audit - Connaissance dossiers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAgrement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Agrément</inlineHelpText>
        <label>Audit - Agrément</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A &amp; S</inlineHelpText>
        <label>Audit - A &amp; S</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAutreDetail__c</fullName>
        <inlineHelpText>Si oui, préciser</inlineHelpText>
        <label>Audit - Autres identification Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAutre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Autres</inlineHelpText>
        <label>Audit - Autres identification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpFiscalite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fiscalité locale</inlineHelpText>
        <label>Audit - Fiscalité locale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpJei__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>JEI / CIJV / CI Collection</inlineHelpText>
        <label>Audit - JEI / CIJV / CI Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpPropriete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Propriété intellectuelle</inlineHelpText>
        <label>Audit - Propriété intellectuelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpTAT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TAT / ACS</inlineHelpText>
        <label>Audit - TAT / ACS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditElementFinancierDetail__c</fullName>
        <inlineHelpText>Si non, préciser la date prévue</inlineHelpText>
        <label>Audit - Eléments financier Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditElementFinancier__c</fullName>
        <inlineHelpText>Récupération d&apos;éléments financiers dès la fin de l&apos;audit</inlineHelpText>
        <label>Audit - Eléments financiers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditElementTechniqueDetail__c</fullName>
        <inlineHelpText>Si non, préciser la date prévue</inlineHelpText>
        <label>Audit - Eléments techniques Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditElementTechnique__c</fullName>
        <inlineHelpText>Récupération d&apos;éléments techniques dès la fin de l&apos;audit</inlineHelpText>
        <label>Audit - Eléments techniques</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditEnjeuxMontant__c</fullName>
        <inlineHelpText>Si oui, préciser combien</inlineHelpText>
        <label>Audit - Enjeux CIR/CII Montant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auditEnjeux__c</fullName>
        <inlineHelpText>Estimation des enjeux CIR/CII</inlineHelpText>
        <label>Audit - Enjeux CIR/CII</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pas d&apos;enjeu</fullName>
                </value>
                <value>
                    <fullName>Oui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditIdentificationClient__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de l&apos;ensemble des interlocuteurs clients</inlineHelpText>
        <label>Audit - Identification clients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditIdentificationGAC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de l&apos;ensemble des interlocuteurs GAC</inlineHelpText>
        <label>Audit - Identification GAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>Audit - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu à ton Audit ? ( / 5)</inlineHelpText>
        <label>Audit - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditPerimetreAutreDetail__c</fullName>
        <inlineHelpText>Si oui, préciser</inlineHelpText>
        <label>Audit - Périmètre Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditPerimetreAutre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Autres</inlineHelpText>
        <label>Audit - Autre périmètre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreEtude__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bureau d&apos;étude</inlineHelpText>
        <label>Audit - Bureau d&apos;étude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Maintenance</inlineHelpText>
        <label>Audit - Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreMarketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marketing</inlineHelpText>
        <label>Audit - Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreQualite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualité / méthodes et process</inlineHelpText>
        <label>Audit - Qualité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreRd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Service R&amp;D / Laboratoire</inlineHelpText>
        <label>Audit - Service R&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreSi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Système d&apos;info</inlineHelpText>
        <label>Audit - Système d&apos;info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPlanificationDeadline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Planification de l&apos;ensemble des deadlines de la mission</inlineHelpText>
        <label>Audit - Planification Deadlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPointageDetail__c</fullName>
        <inlineHelpText>Si oui, préciser lesquels</inlineHelpText>
        <label>Audit - Pointage détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditPointage__c</fullName>
        <inlineHelpText>Y-a-t-il du personnel qui ne pointe pas</inlineHelpText>
        <label>Audit - Pointage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditSuiviDetail__c</fullName>
        <inlineHelpText>Si non, préciser la solution prévue</inlineHelpText>
        <label>Audit - Suivi de temps détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditSuivi__c</fullName>
        <inlineHelpText>Existence d&apos;un suivi de temps</inlineHelpText>
        <label>Audit - Suivi de temps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avancementAudit__c</fullName>
        <formula>(
if (auditPerimetreRd__c,1,0) + 
if (auditPerimetreEtude__c,1,0) + 
if (auditPerimetreQualite__c,1,0) +
if (auditPerimetreMaintenance__c,1,0) + 
if (auditPerimetreMarketing__c,1,0) + 
if (auditPerimetreSi__c,1,0) +
if (auditPerimetreAutre__c,1,0) + 
if (ISBLANK(TEXT(auditSuivi__c)),0,1) + 
if (ISBLANK(TEXT(auditPointage__c)),0,1) + 
if (OR(auditAnteriorite__c,auditAnterioriteHistorique__c),1,0) + 
if (ISBLANK(TEXT(auditElementFinancier__c)),0,1) + 
if (ISBLANK(TEXT(auditElementTechnique__c)),0,1) + 
if (auditPlanificationDeadline__c,1,0) +
if (auditIdentificationClient__c,1,0) +
if (auditIdentificationGAC__c,1,0) +
if (ISBLANK(TEXT(auditEnjeux__c)),0,1) +
if (auditMajChamps__c,1,0)
)
/17</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Avancement Check List Audit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementCIR__c</fullName>
        <formula>( 
if (cirPersonnelQualifTechnique__c,1,0) + 
if (cirPersonnelJustifImplantation__c,1,0) + 
if (cirPersonnelVerifJustificat__c,1,0) + 
if (cirPersonnelIdentPersonnel__c,1,0) + 
if (cirPersonnelAffectPersonnel__c,1,0) + 
if (cirPersonnelNonPointants__c,1,0) + 
if (cirPersonnelPresenceIngenieur__c,1,0) + 
if (cirPersonnelTempsTravail__c,1,0) + 
if (cirPersonnelDate__c,1,0) + 
if (cirPersonnelSalaire__c,1,0) + 
if (cirPersonnelCharge__c,1,0) + 
if (cirPersonnelTauxCharge__c,1,0) + 
if (cirPersonnelInteressement__c,1,0) + 
if (cirPersonnelAnterieur__c,1,0) + 
if (cirPersonnelRD__c,1,0) + 
if (cirDotMaterielNeuf__c,1,0) + 
if (cirDotDeductible__c,1,0) + 
if (cirDotProjetValo__c,1,0) + 
if (cirDotTauxDotation__c,1,0) + 
if (cirDotCreditBail__c,1,0) + 
if (cirDotAnnuite__c,1,0) + 
if (cirDotAnterieur__c,1,0) + 
if (cirDotSpecifique__c,1,0) + 
if (cirExtEuropeen__c,1,0) + 
if (cirExtPublic__c,1,0) + 
if (cirExtPrive__c,1,0) + 
if (cirExtProjetValo__c,1,0) + 
if (cirExtJustifPrestation__c,1,0) + 
if (cirExtDependance__c,1,0) + 
if (cirExtRenonciation__c,1,0) + 
if (cirExtFactureLibelle__c,1,0) + 
if (cirExtFactureDate__c,1,0) + 
if (cirExtFactureMontantHT__c,1,0) + 
if (cirExtAnterieur__c,1,0) + 
if (cirExtPlafond__c,1,0) + 
if (cirVeilleNature__c,1,0) + 
if (cirVeilleProjetValo__c,1,0) + 
if (cirVeilleAnterieur__c,1,0) + 
if (cirVeillePlafond__c,1,0) + 
if (cirNormaEligible__c,1,0) + 
if (cirNormaTempsPreparation__c,1,0) + 
if (cirNormaJustif__c,1,0) + 
if (cirNormaAnterieur__c,1,0) + 
if (cirBrevetPrise__c,1,0) + 
if (cirBrevetDefense__c,1,0) + 
if (cirBrevetAmortissement__c,1,0) + 
if (cirBrevetFactureDate__c,1,0) + 
if (cirBrevetFactureMontantHT__c,1,0) + 
if (cirBrevetAnterieur__c,1,0) + 
if (cirRDAnterieur__c,1,0) + 
if (cirSubvRD__c,1,0) + 
if (cirSubvDeduite__c,1,0) + 
if (cirSubvAnnee__c,1,0) + 
if (cirSubvMontant__c,1,0) + 
if (cirSubvNature__c,1,0) + 
if (cirSubvThesard__c,1,0) + 
if (cirSubvAgree__c,1,0) + 
if (cirSubvCabinetRemu__c,1,0) + 
if (cirSubvCabinetDeduction__c,1,0) + 
if (cirSubvAnterieur__c,1,0) + 
if (cirTotalAnterieur__c,1,0) + 
if (cirTotalProjetValo__c,1,0) + 
if (cirCerfaFait__c,1,0) + 
if (cirCerfaPJ__c,1,0) + 
if (cirMajChamps__c,1,0)
)
/65</formula>
        <label>% Avancement Check List Valo CIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementDossiers__c</fullName>
        <formula>( 
if (dotProjetValo__c,1,0) + 
if (dotMatrice__c,1,0) + 
if (dotIndicateurs__c,1,0) + 
if (ISBLANK(TEXT(dotIndicateursListe__c)),0,1) + 
if (dotRelecture__c,1,0) + 
if (dotDJ__c,1,0) + 
if (dotQualite__c,1,0) + 
if (dotVerrou__c,1,0) + 
if (dotRegroupements__c,1,0) + 
if (OR(dotRegroupementsNo__c,dotRegroupementsYes__c),1,0) + 
if (dotHeuresProjet__c,1,0) + 
if (dotDescription__c,1,0) + 
if (dotAnnexes__c,1,0) + 
if (dotPj__c,1,0) + 
if (dofPresentation__c,1,0) + 
if (dofProjetValo__c,1,0) + 
if (dofMatrice__c,1,0) + 
if (dofAnnexes__c,1,0) + 
if (dofMajChamps__c,1,0)
) 
/19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Avancement Check List Dossiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementGlobal__c</fullName>
        <label>% Avancement global</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>cirBrevetAmortissement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dotations aux amortissements des brevets acquis</inlineHelpText>
        <label>CIR - Brevets amortissement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Brevet années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetDefense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>En cas de défense de brevets : prise en compte du  temps de personnel (cf. dépenses de personnel)</inlineHelpText>
        <label>CIR - Défense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CIR - Brevet date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetFactureMontantHT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CIR - Brevet montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetPrise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>S&apos;agit-il bien de la prise, maintenance et/ou défense de brevets ?</inlineHelpText>
        <label>CIR - Prise brevets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirCerfaFait__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fait</inlineHelpText>
        <label>CIR - Cerfa fait</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirCerfaPJ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PJ ajoutée dans IA</inlineHelpText>
        <label>CIR - Cerfa PJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotAnnuite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que la valeur retenue correspond bien à l&apos;annuité de l&apos;exercice concerné ?</inlineHelpText>
        <label>CIR - Annuité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Dotations années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotCreditBail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>En cas de Crédit-Bail, as-tu récupéré les attestations relatives (à joindre en annexe de la déclaration CERFA) ?</inlineHelpText>
        <label>CIR - Crédit-Bail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotDeductible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Les dotations sont-elles fiscalement déductibles ?</inlineHelpText>
        <label>CIR - Dotations déductibles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotDerogation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Régimes dérogatoires (suramortissement, autres, …)</inlineHelpText>
        <label>CIR - Dérogation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotFusion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Régime de fusion - acquisition</inlineHelpText>
        <label>CIR - Fusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotMaterielNeuf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acquisition du matériel à l&apos;état neuf</inlineHelpText>
        <label>CIR - Matériel neuf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chaque dotation est-elle bien reliée à un projet de recherche valorisé ?</inlineHelpText>
        <label>CIR - Dotation sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotSinistre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dotations en cas de sinistre</inlineHelpText>
        <label>CIR - Sinistre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotSpecifique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cas Spécifiques</inlineHelpText>
        <label>CIR - Cas spécifiques</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotTauxDotation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on justifier le taux d&apos;affectation des dotations ?</inlineHelpText>
        <label>CIR - Justitifer taux dotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Prestations années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtDependance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Liens de dépendance de l’organisme vérifié</inlineHelpText>
        <label>CIR - Liens de dépendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtEuropeen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestataires européens</inlineHelpText>
        <label>CIR - Prestataires européens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CIR - Prestation date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureLibelle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Libellé de la facture vérifié</inlineHelpText>
        <label>CIR - Libellé facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureMontantHT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CIR - Prestation montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtJustifPrestation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on récupéré les justificatifs liées à la prestation (facture, CDC, …) ?</inlineHelpText>
        <label>CIR - Jusitifier prestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPlafond__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du plafonnement de ce poste de dépense (ratio dépenses internes / dépenses prestées, 2 M€ si lien de dépendance, 10 M€ pour les privés, 12 M€ si publics + privés)</inlineHelpText>
        <label>CIR - Prestations plafonnement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPrive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestations auprès d&apos;organismes privés -&gt; vérification de l&apos;agrément (SIREN) et récupération de l&apos;attestation d&apos;agrément</inlineHelpText>
        <label>CIR - Organismes privés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on relier chaque prestation aux projets valorisés ? -&gt; justification de l&apos;enjeu de la prestation sous-traitée dans le cadre du déroulé du projet</inlineHelpText>
        <label>CIR - Prestation sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestations auprès d&apos;organismes publics -&gt; doublement du montant de la facture</inlineHelpText>
        <label>CIR - Organismes publics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtRenonciation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on vérifié s&apos;il n&apos;y avait pas eu renonciation à l&apos;agrément ?</inlineHelpText>
        <label>CIR - Renonciation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>CIR - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Normalisation années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Organisme éligible</inlineHelpText>
        <label>CIR - Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaJustif__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Justificatifs collectés</inlineHelpText>
        <label>CIR - Justificatifs Normalisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaTempsPreparation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Le temps de préparation de ces réunions est exclu</inlineHelpText>
        <label>CIR - Temps de préparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu à ta Valo ? ( / 5)</inlineHelpText>
        <label>CIR - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirPersonnelAffectPersonnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Affectation de chaque personnel à un projet valorisé</inlineHelpText>
        <label>CIR - Affectation personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Personnel années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Retraitement des charges sociales</inlineHelpText>
        <label>CIR - Charges sociales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôler les dates entrée / sortie / changement de statut du personnel</inlineHelpText>
        <label>CIR - Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelIdentPersonnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de chaque personnel (attention aux homonymes possibles --&gt; correspondance avec les matricules)</inlineHelpText>
        <label>CIR - Identification personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelInteressement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte de l&apos;intéressement / participation</inlineHelpText>
        <label>CIR - Intéressement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelJustifImplantation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Justifier l&apos;implication technique du personnel de support</inlineHelpText>
        <label>CIR - Justifier implantation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelNonPointants__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte et justification des non-pointants</inlineHelpText>
        <label>CIR - Non pointants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelPresenceIngenieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la présence d&apos;au moins un ingénieur / chef de projet par projet valorisé</inlineHelpText>
        <label>CIR - Présence ingénieur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelQualifTechnique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualification technique du personnel et récupération du diplôme correspondant</inlineHelpText>
        <label>CIR - Qualification technique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelRD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la cohérence du taux RD de la personne valorisée par rapport à sa fonction (vigilance au 100%)</inlineHelpText>
        <label>CIR - RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelSalaire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du salaire brut annuel</inlineHelpText>
        <label>CIR - Salaire brut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelTauxCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence du taux de charges affecté au personnel</inlineHelpText>
        <label>CIR - Taux de charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelTempsTravail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôler les valeurs du temps de travail effectif  du personnel</inlineHelpText>
        <label>CIR - Temps de travail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelVerifJustificat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier les justificatifs des statuts particuliers : Jeunes Docteurs, Thésard,  Mise à Disposition du personnel, Intérimaires, Stagiaires, Personnel non salarié, Inventeur</inlineHelpText>
        <label>CIR - Vérifier justificatifs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirRDAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CIR - RD année N-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAgree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pour les sociétés agréées qui déclarent du CIR : déduction des montants des sommes facturées à l&apos;entreprise donneuse d&apos;ordre qui bénéficie du CIR pour les travaux d&apos;innovation confiés</inlineHelpText>
        <label>CIR - Sociétés agréées</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAnnee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de l&apos;année de perception de la subvention</inlineHelpText>
        <label>CIR - Subvention année</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de la méthode de déduction utilisée en année N-1 pour appliquer la continuité de méthode</inlineHelpText>
        <label>CIR - Déduction années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvCabinetDeduction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Déduction des honoraires au résultat du cabinet de conseil</inlineHelpText>
        <label>CIR - Cabinet déduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvCabinetRemu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rémunération au forfait du cabinet de conseil</inlineHelpText>
        <label>CIR - Cabinet rémunération</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvDeduite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques antérieurement déduites et qui ont été remboursées sur l&apos;année (à réintégrer)</inlineHelpText>
        <label>CIR - Subvention déduite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvMontant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification du montant à déduire/à réintégrer par rapport aux dépenses engagées</inlineHelpText>
        <label>CIR - Subvention montant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvNature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la nature de la subvention / de l&apos;avance remboursable</inlineHelpText>
        <label>CIR - Subvention nature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvRD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques / avances remboursables perçues (à déduire) : Vérification qu&apos;il s&apos;agit bien une subvention liée à la RD</inlineHelpText>
        <label>CIR - Subvention RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvThesard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que lorsqu&apos;on valorise un thésard CIFRE, une subvention ANRT doit être déduite</inlineHelpText>
        <label>CIR - Thésard CIFRE</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>